--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
         <div class="step2">
           <div class="stage"><h3>My current project</h3></div>
           <ul>
-            <li>A Responsive Portfolio website</li>
+            <li>My final project for Web Development Bootcamp:<a href="https://yananwu729.github.io/Notting-Hill-Carnival/">Notting Hill Carnival</a></li>
             <li>A Cafe Menu</li>
             <li>A Balance Sheet</li>
             <li>A Magazine</li>
