Tidy up picture locations

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       <div class="header">
         <div class="profile">
           <div>
-            <img src="./Images/Yanan Wu.JPG" alt="Yanan Wu" />
+            <img src="./images/yanan- wu.jpg" alt="Yanan Wu" />
           </div>
         </div>
         <div>
@@ -83,9 +83,9 @@
       <div class="slideshow-container">
       <!-- Full-width images with title and caption text -->
       <div class="mySlides fade">
-      <div class="titletext"><h3>Chinese painting workshop: plum blossom</h3></div>
-        <img src="./Images/culture-workshops/painting.jpg" alt="Chinese painting plum blossom" style="width:100%">
+      <img src="./images/culture-workshops/painting.jpg" alt="Chinese painting plum blossom" style="width:100%">
         <div class="text">
+          <h3>Chinese painting workshop: plum blossom</h3>
           <p>
             It was the beginning of spring, and Year 4 students were learning
             colour vocabulary in Mandarin lessons. So I thought it would be
@@ -96,35 +96,38 @@
       </div>
 
       <div class="mySlides fade">
-      <div class="titletext"><h3>Chinese New Year workshop: Calligraphy</h3></div>
-        <img src="./Images/culture-workshops/fu.jpg" alt="A Chinese character means luck" style="width:100%">
+      <img src="./images/culture-workshops/fu.jpg" alt="A Chinese character means luck" style="width:100%">
       <div class="text">
+        <h3>Chinese New Year workshop: Calligraphy</h3>
         <p>
           This is Year 6 student Nitya's calligraphy work. During Chinese New
           Year celebrations, students learned about traditional customs and
           became intrigued by the character “福” (fú, meaning “luck”). I
           demonstrated how to write it, and afterward, students practiced
           creating their own versions of the character.
-        </p></div>
+        </p>
+      </div>
       </div>
 
       <div class="mySlides fade">
-      <div class="titletext"><h3>Chinese workshop: blue and white porcelain</h3></div>
-        <img src="./Images/culture-workshops/qinghuaci.jpg" alt="blue and white porcelain on a paper plate" style="width:100%">
+      <div class="titletext"></div>
+      <img src="./images/culture-workshops/qinghuaci.jpg" alt="blue and white porcelain on a paper plate" style="width:100%">
       <div class="text">
+        <h3>Chinese workshop: blue and white porcelain</h3>
         <p>
           After a school trip to the British Museum, students' interests in
           blue-and-white porcelain were piqued. I held a workshop to introduce
           it in detail, and students designed their own blue-and-white
           porcelain patterns on paper plates. Some even tried writing the
           Chinese characters for “blue and white porcelain” (青花瓷).
-        </p></div>
+        </p>
+      </div>
       </div>
 
       <div class="mySlides fade">
-        <div class="titletext"><h3>Chinese workshop: Beijing opera facial makeup</h3></div>
-          <img src="./Images/culture-workshops/facial-makeuo-in-opera.jpg" alt="Beijing opera facial makeup for the Monkey King" style="width:100%">
+        <img src="./images/culture-workshops/facial-makeuo-in-opera.jpg" alt="Beijing opera facial makeup for the Monkey King" style="width:100%">
         <div class="text">
+          <h3>Chinese workshop: Beijing opera facial makeup</h3>
           <p>
             My students have a very deep appreciation for the story "Journey to
             the West". Their favourite figure has always been the Monkey King.
@@ -132,13 +135,14 @@
             thrilling for my students that they will make a Beijing opera facial
             makeup for the Monkey King. My thought turned out to be true. They
             had a lot of fun.
-          </p></div>
+          </p>
+        </div>
       </div>
 
       <div class="mySlides fade">
-        <div class="titletext"><h3>Chinese traditional clothes workshop: Qipao</h3></div>
-          <img src="./Images/culture-workshops/qipao-2.jpg" alt="Chinese traditional garment: Qipao" style="width:100%">
+        <img src="./images/culture-workshops/qipao-2.jpg" alt="Chinese traditional garment: Qipao" style="width:100%">
         <div class="text">
+          <h3>Chinese traditional clothes workshop: Qipao</h3>
           <p>
             A group of my students watched a Chinese costume drama and enjoyed
             it. They asked why I never wore stylish clothes like the actresses.
@@ -177,8 +181,8 @@
           <ul>
             <li>HTML5</li>
             <li>CSS3</li>
-            <li>Javascript (basic)</li>
-            <li>Python(basic)</li>
+            <li>Javascript</li>
+            <li>Python</li>
             <li>Agile</li>
           </ul>
         </div>
@@ -190,7 +194,7 @@
             <li>A Cafe Menu</li>
             <li>A Balance Sheet</li>
             <li>A Magazine</li>
-            <li>A Quiz</li>
+
           </ul>
         </div>
         <div class="step3">
