--- a/src/index.html
+++ b/src/index.html
@@ -4,42 +4,60 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yanan Wu's Portfolio</title>
-    <link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link
+      rel="shortcut icon"
+      href="./images/favicon/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta
-    name="description"
-    content="Yanan Wu's Portfolio website - Yanan's Journey"
-  />
-  <meta
-    name="keywords"
-    content="Yanan Wu, Language teacher, Frontend Developer, Photographer"
-  />
-  <meta name="author" content="Yanan Wu" />
+      name="description"
+      content="Yanan Wu's Portfolio website - Yanan's Journey"
+    />
+    <meta
+      name="keywords"
+      content="Yanan Wu, Language teacher, Frontend Developer, Photographer"
+    />
+    <meta name="author" content="Yanan Wu" />
 
-  <!-- Social Media Meta Tags -->
-  <meta property="og:title" content="Yanan Wu's Portfolio" />
-  <meta
-    property="og:description"
-    content="Official site for Yanan Wu's Portfolio"
-  />
-  <meta property="og:image" content="URL to your webpage's image" />
-  <meta property="og:url" content="URL of your webpage" />
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="Yanan Wu's Portfolio" />
+    <meta
+      property="og:description"
+      content="Official site for Yanan Wu's Portfolio"
+    />
+    <meta property="og:image" content="URL to your webpage's image" />
+    <meta property="og:url" content="URL of your webpage" />
 
-  <meta name="twitter:title" content="Yanan Wu's Portfolio" />
-  <meta
-    name="twitter:description"
-    content="Yanan Wu's Portfolio website - Yanan's Journey"
-  />
-  <meta name="twitter:image" content="URL to your webpage's image" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="" type="image/x-icon" />
+    <meta name="twitter:title" content="Yanan Wu's Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Yanan Wu's Portfolio website - Yanan's Journey"
+    />
+    <meta name="twitter:image" content="URL to your webpage's image" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="" type="image/x-icon" />
 
-  <link rel="stylesheet" href="./style.css" />
-  <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
   </head>
 
   <body>
@@ -83,101 +101,125 @@
     </section>
 
     <section id="language-teacher">
-      <div class="workshops"><h2>Wonderful moments of being a Mandarin teacher</h2></div>
+      <div class="workshops">
+        <h2>Wonderful moments of being a Mandarin teacher</h2>
+      </div>
       <!-- Slideshow container -->
       <div class="slideshow-container">
-      <!-- Full-width images with title and caption text -->
-      <div class="mySlides fade">
-      <img src="./images/culture-workshops/painting.jpg" alt="Chinese painting plum blossom" style="width:100%">
-        <div class="text">
-          <h3>Chinese painting workshop: plum blossom</h3>
-          <p>
-            It was the beginning of spring, and Year 4 students were learning
-            colour vocabulary in Mandarin lessons. So I thought it would be
-            great for the culture workshop's topic to focus on Chinese painting,
-            where students could not only gain real-life experience in Chinese
-            painting but also reinforce their memory of colour vocabulary.
-          </p></div>
-      </div>
-
-      <div class="mySlides fade">
-      <img src="./images/culture-workshops/fu.jpg" alt="A Chinese character means luck" style="width:100%">
-      <div class="text">
-        <h3>Chinese New Year workshop: Calligraphy</h3>
-        <p>
-          This is Year 6 student Nitya's calligraphy work. During Chinese New
-          Year celebrations, students learned about traditional customs and
-          became intrigued by the character “福” (fú, meaning “luck”). I
-          demonstrated how to write it, and afterward, students practiced
-          creating their own versions of the character.
-        </p>
-      </div>
-      </div>
-
-      <div class="mySlides fade">
-      <div class="titletext"></div>
-      <img src="./images/culture-workshops/qinghuaci.jpg" alt="blue and white porcelain on a paper plate" style="width:100%">
-      <div class="text">
-        <h3>Chinese workshop: blue and white porcelain</h3>
-        <p>
-          After a school trip to the British Museum, students' interests in
-          blue-and-white porcelain were piqued. I held a workshop to introduce
-          it in detail, and students designed their own blue-and-white
-          porcelain patterns on paper plates. Some even tried writing the
-          Chinese characters for “blue and white porcelain” (青花瓷).
-        </p>
-      </div>
-      </div>
-
-      <div class="mySlides fade">
-        <img src="./images/culture-workshops/facial-makeuo-in-opera.jpg" alt="Beijing opera facial makeup for the Monkey King" style="width:100%">
-        <div class="text">
-          <h3>Chinese workshop: Beijing opera facial makeup</h3>
-          <p>
-            My students have a very deep appreciation for the story "Journey to
-            the West". Their favourite figure has always been the Monkey King.
-            After the session of Beijing Opera, I thought it would be so
-            thrilling for my students that they will make a Beijing opera facial
-            makeup for the Monkey King. My thought turned out to be true. They
-            had a lot of fun.
-          </p>
+        <!-- Full-width images with title and caption text -->
+        <div class="mySlides fade">
+          <img
+            src="./images/culture-workshops/painting.jpg"
+            alt="Chinese painting plum blossom"
+            style="width: 100%"
+          />
+          <div class="text">
+            <h3>Chinese painting workshop: plum blossom</h3>
+            <p>
+              It was the beginning of spring, and Year 4 students were learning
+              colour vocabulary in Mandarin lessons. So I thought it would be
+              great for the culture workshop's topic to focus on Chinese
+              painting, where students could not only gain real-life experience
+              in Chinese painting but also reinforce their memory of colour
+              vocabulary.
+            </p>
+          </div>
         </div>
-      </div>
 
-      <div class="mySlides fade">
-        <img src="./images/culture-workshops/qipao-2.jpg" alt="Chinese traditional garment: Qipao" style="width:100%">
-        <div class="text">
-          <h3>Chinese traditional clothes workshop: Qipao</h3>
-          <p>
-            A group of my students watched a Chinese costume drama and enjoyed
-            it. They asked why I never wore stylish clothes like the actresses.
-            This inspired me to introduce Chinese traditional clothes to my
-            students. When they were introduced to Qipao, a very well-known
-            Chinese traditional clothing, they couldn't wait to design their
-            versions of Qipao, hoping that they could make it real one day. I
-            had fear that boys would't enjoy this workshop as much as girls did,
-            but I was wrong, they told me that they wanted to make one for their
-            moms. I found it so sweet and touching.
-          </p></div>
-      </div>
+        <div class="mySlides fade">
+          <img
+            src="./images/culture-workshops/fu.jpg"
+            alt="A Chinese character means luck"
+            style="width: 100%"
+          />
+          <div class="text">
+            <h3>Chinese New Year workshop: Calligraphy</h3>
+            <p>
+              This is Year 6 student Nitya's calligraphy work. During Chinese
+              New Year celebrations, students learned about traditional customs
+              and became intrigued by the character “福” (fú, meaning “luck”). I
+              demonstrated how to write it, and afterward, students practiced
+              creating their own versions of the character.
+            </p>
+          </div>
+        </div>
 
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <div class="mySlides fade">
+          <img
+            src="./images/culture-workshops/qinghuaci.jpg"
+            alt="blue and white porcelain on a paper plate"
+            style="width: 100%"
+          />
+          <div class="text">
+            <h3>Chinese workshop: blue and white porcelain</h3>
+            <p>
+              After a school trip to the British Museum, students' interests in
+              blue-and-white porcelain were piqued. I held a workshop to
+              introduce it in detail, and students designed their own
+              blue-and-white porcelain patterns on paper plates. Some even tried
+              writing the Chinese characters for “blue and white porcelain”
+              (青花瓷).
+            </p>
+          </div>
+        </div>
+
+        <div class="mySlides fade">
+          <img
+            src="./images/culture-workshops/facial-makeuo-in-opera.jpg"
+            alt="Beijing opera facial makeup for the Monkey King"
+            style="width: 100%"
+          />
+          <div class="text">
+            <h3>Chinese workshop: Beijing opera facial makeup</h3>
+            <p>
+              My students have a very deep appreciation for the story "Journey
+              to the West". Their favourite figure has always been the Monkey
+              King. After the session of Beijing Opera, I thought it would be so
+              thrilling for my students that they will make a Beijing opera
+              facial makeup for the Monkey King. My thought turned out to be
+              true. They had a lot of fun.
+            </p>
+          </div>
+        </div>
+
+        <div class="mySlides fade">
+          <img
+            src="./images/culture-workshops/qipao-2.jpg"
+            alt="Chinese traditional garment: Qipao"
+            style="width: 100%"
+          />
+          <div class="text">
+            <h3>Chinese traditional clothes workshop: Qipao</h3>
+            <p>
+              A group of my students watched a Chinese costume drama and enjoyed
+              it. They asked why I never wore stylish clothes like the
+              actresses. This inspired me to introduce Chinese traditional
+              clothes to my students. When they were introduced to Qipao, a very
+              well-known Chinese traditional clothing, they couldn't wait to
+              design their versions of Qipao, hoping that they could make it
+              real one day. I had fear that boys would't enjoy this workshop as
+              much as girls did, but I was wrong, they told me that they wanted
+              to make one for their moms. I found it so sweet and touching.
+            </p>
+          </div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
-      <br>
+      <br />
 
       <!-- The dots/circles -->
-      <div style="text-align:center">
+      <div style="text-align: center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
         <span class="dot" onclick="currentSlide(5)"></span>
-      </div> 
+      </div>
     </section>
 
-       
     <section id="frontend-developer">
       <h2>My Journey to become a Frontend Developer</h2>
       <div class="learning-journey">
@@ -195,10 +237,16 @@
         <div class="step2">
           <div class="stage"><h3>My current project</h3></div>
           <ul>
-            <li><a href="https://yananwu729.github.io/Notting-Hill-Carnival/">Notting Hill Carnival<img src="./images/projects-preview/notting-hill-carnival-project-preview.png" alt="Notting Hill Carnival project preview" style="width: 55%;"></a></li>
-              <li><a href="">Photography Portfolio</a></li>
+            <li>
+              <a href="https://yananwu729.github.io/Notting-Hill-Carnival/"
+                >Notting Hill Carnival<img
+                  src="./images/projects-preview/notting-hill-carnival-project-preview.png"
+                  alt="Notting Hill Carnival project preview"
+                  style="width: 55%"
+              /></a>
+            </li>
+            <li><a href="">Photography Portfolio</a></li>
             <li><a href="">International Languages Hub </a></li>
-            
           </ul>
         </div>
         <div class="step3">
@@ -213,8 +261,6 @@
         </div>
       </div>
     </section>
-
-
 
     <section id="gallery"></section>
 
