Profile text font and font size updates

--- a/src/index.html
+++ b/src/index.html
@@ -90,11 +90,11 @@
           </div>
         </div>
         <div>
-          <h1>Hi, my name is Yanan Wu.</h1>
-          <p>
+          <h1 style="font-size: 3rem; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Hi, my name is Yanan Wu.</h1>
+          <p style="font-size: 2.1rem; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
             I am a qualified Chinese and English teacher, a frontend developer,
             who also has great passion for photography, caring about our society
-            and planet. <br />I would like to make some positive impacts.
+            and planet. <br><br>I would like to make some positive impacts.
           </p>
         </div>
       </div>
