--- a/src/index.html
+++ b/src/index.html
@@ -239,10 +239,11 @@
           <ul>
             <li>
               <a href="https://yananwu729.github.io/Notting-Hill-Carnival/"
-                >Notting Hill Carnival<img
+                >Notting Hill Carnival <br>
+                <img
                   src="./images/projects-preview/notting-hill-carnival-project-preview.png"
                   alt="Notting Hill Carnival project preview"
-                  style="width: 55%"
+                  style="width: 35%"
               /></a>
             </li>
             <li><a href="">Photography Portfolio</a></li>
