--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,14 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="" type="image/x-icon" />
 
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Varela+Round&display=swap');
+      </style>
+      
+
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js"></script>
+
   </head>
 
   <body>
@@ -90,9 +96,9 @@
           </div>
         </div>
         <div>
-          <h1 style="font-size: 3rem; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Hi, my name is Yanan Wu.</h1>
-          <p style="font-size: 2.1rem; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
-            I am a qualified Chinese and English teacher, a frontend developer,
+          <h1 style="font-size: 3rem; font-family: Nunito, sans-serif;"> Hi, my name is Yanan Wu.</h1>
+          <p style="font-size: 2.1rem; font-family: Nunito, sans-serif;">
+            I am a Mandarin Chinese and TEFL teacher, a Front-end developer,
             who also has great passion for photography, caring about our society
             and planet. <br><br>I would like to make some positive impacts.
           </p>
